# leetStreak

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  claude.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/models/: assignment.py  consumed_token.py  question.py  user.py
app/routes/: admin.py  confirm.py  respond.py
app/scheduler/: daily_email_job.py  scheduler.py  streak_reset_job.py
app/schemas/: responses.py
app/seed/: seed_questions.py
app/services/: email_content_builder.py  email_service.py  guilt_message_service.py  level_service.py  magic_link_service.py  question_picker.py  streak_service.py
app/templates/emails/: daily.html
app/templates/web/: all_done.html  already_done.html  confirm.html  responded.html
migrations/: env.py
migrations/versions/: 5abd93459292_initial.py  b3c4d5e6f7a8_add_next_question_index.py
seed_data/: leetcode_350.json
tests/: conftest.py  test_guilt_message_service.py  test_level_service.py  test_magic_link_service.py  test_question_picker.py  test_streak_service.py
