[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "leetstreak"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "sqlalchemy==2.0.*",
    "alembic==1.13.*",
    "apscheduler==3.10.*",
    "pyjwt==2.9.*",
    "jinja2==3.1.*",
    "pydantic-settings==2.*",
    "python-dotenv==1.*",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "httpx",
]
